# subspace

./: .bazelignore  .bazelrc  .gitignore  Android.bp  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  MODULE.bazel  README.md  WORKSPACE
.bcr/: config.yml  metadata.template.json
.cursor/rules/: test-runner.mdc
.cursor/skills/subspace-builds/: SKILL.md
.cursor/skills/subspace-clients/: SKILL.md
.github/scripts/: android-asio-test.sh  android-test.sh  cmake-android-test.sh  qnx-deploy-client-test.sh
.github/workflows/: ci.yml  publish.yaml
android/: Android.bp  CMakeLists.txt
android/java/: BUILD.bazel  subspace_java_client_test.sh
android/java/com/subspace/: SubspaceClient.java  SubspaceException.java  SubspaceMessage.java  SubspacePublisher.java  SubspaceSubscriber.java
android/java/com/subspace/test/: SubspaceJavaClientTest.java
android/jni/: BUILD.bazel  subspace_jni.cc
asio_rpc/: CMakeLists.txt
asio_rpc/client/: BUILD.bazel  client_test.cc  rpc_client.cc  rpc_client.h
asio_rpc/common/: BUILD.bazel  async_wait.cc  async_wait.h  shared_ptr_pipe.h
asio_rpc/example/: BUILD.bazel  client.cc  server.cc
asio_rpc/proto/: BUILD.bazel
asio_rpc/server/: BUILD.bazel  rpc_server.cc  rpc_server.h  server_test.cc
asio_rpc/test/: BUILD.bazel  rpc_test.cc
bazel/: README_QNX.md
bazel/android/: ndk.MODULE.bazel
bazel/toolchains/qnx/: BUILD.bazel  cc_toolchain_config.bzl  qnx_toolchain_config.bzl
bazel/toolchains/qnx/tools/: qnx_tool.sh  qnx_x86_64_strip
bzl/local_rules/: pybind.bzl
c_client/: BUILD.bazel  CMakeLists.txt  client_test.cc  pmem_split_buffer_test.cc  subspace.cc  subspace.h
client/: Android.bp  BUILD.bazel  CMakeLists.txt  arm_crc32.S  asio_client_test.cc  bridge_test.cc  checksum.cc  checksum.h  client.cc  client.h  client_channel.cc  client_channel.h  client_test.cc  latency_test.cc  message.cc  message.h  options.h  publisher.cc  publisher.h  stress_test.cc  subscriber.cc  subscriber.h  syscall_failure_test.cc  test_fixture.h
client/python/: BUILD.bazel  CMakeLists.txt  client.cc  client_test.py
cmake/: QNX8-toolchain.cmake  README_QNX.md  build_qnx.sh
co20_rpc/: CMakeLists.txt
co20_rpc/client/: BUILD.bazel  client_test.cc  rpc_client.cc  rpc_client.h
co20_rpc/common/: BUILD.bazel  shared_ptr_pipe.h
co20_rpc/example/: BUILD.bazel  client.cc  server.cc
co20_rpc/proto/: BUILD.bazel
co20_rpc/server/: BUILD.bazel  rpc_server.cc  rpc_server.h  server_test.cc
co20_rpc/test/: BUILD.bazel  rpc_test.cc
common/: Android.bp  BUILD.bazel  CMakeLists.txt  atomic_bitset.h  bitset.h  channel.cc  channel.h  client_buffer.h  clock.h  common_test.cc  fast_ring_buffer.h  fd.h  fd_test.cc  hexdump.cc  hexdump.h  logging.cc  logging.h  mutex.h  pmem.cc  pmem.h  pmem_test.cc  sockets.cc  sockets.h  split_buffer.cc  split_buffer.h  split_buffer_test.cc  syscall_shim.cc  syscall_shim.h  syscall_shim_test_helper.h  system_info.cc  system_info.h  triggerfd.cc  triggerfd.h
common/async/: BUILD.bazel  async_test.cc  context.h  runtime.h  socket.cc  socket.h  wait.cc  wait.h
coro_rpc/: CMakeLists.txt
coro_rpc/client/: BUILD.bazel  client_test.cc  rpc_client.cc  rpc_client.h
coro_rpc/common/: BUILD.bazel  async_wait.cc  async_wait.h  shared_ptr_pipe.h
coro_rpc/example/: BUILD.bazel  client.cc  server.cc
coro_rpc/proto/: BUILD.bazel
coro_rpc/server/: BUILD.bazel  rpc_server.cc  rpc_server.h  server_test.cc
coro_rpc/test/: BUILD.bazel  rpc_test.cc
coroutines/: BUILD.bazel
docs/: Block2Features.md  Version2Features.md  android.md  asio-backend.md  c-client.md  checksums-and-metadata.md  client-architecture.md  client_design.md  qnx-pmem.md  rust-client.md  server-architecture.md  shadow-process.md  split-buffers.md
manual_tests/: BUILD.bazel  crc32_perf.cc  cross_host_bridge.sh  perf_subspace.cc  perf_subspace_pub.cc  perf_subspace_sub.cc  perf_tcp_recv.cc  perf_tcp_send.cc  perf_test.sh  pub.cc  sub.cc
patches/: boost_asio_android_pthread.patch
platform/android/: BUILD.bazel
platform/host/: BUILD.bazel
plugins/: BUILD.bazel  CMakeLists.txt  nop_plugin.cc  split_buffer_free_test_plugin.cc
proto/: Android.bp  BUILD.bazel  CMakeLists.txt  subspace.pb.cc  subspace.pb.h  subspace.proto
ros2/: README.md  cyclonedds_subspace.xml  ros2_subspace_jazzy.repos
ros2/patches/: cyclonedds-direct-subspace.patch  rmw-cyclonedds-direct-subspace.patch
ros2/subspace_vendor/: CMakeLists.txt  package.xml
ros2/test/: README.md  run_overlay_smoke.sh  run_perf_matrix.py
rpc/: Android.bp  CMakeLists.txt  README.md  subspace_rpc_library.bzl
rpc/client/: BUILD.bazel  client_test.cc  rpc_client.cc  rpc_client.h
rpc/common/: BUILD.bazel  rpc_common.h  shared_ptr_pipe_base.h
rpc/example/: BUILD.bazel  client.cc  server.cc
rpc/idl_compiler/: BUILD.bazel  gen.cc  gen.h  main.cc  run_protoc.sh  service_gen.cc  service_gen.h
rpc/proto/: BUILD.bazel  rpc_test.proto
rpc/server/: BUILD.bazel  rpc_server.cc  rpc_server.h  server_test.cc
rpc/test/: BUILD.bazel  rpc_test.cc
rust_client/: BUILD.bazel  CMakeLists.txt  Cargo.toml  build.rs  cross_lang_ffi.cc  cross_lang_ffi.h
rust_client/src/: bitset.rs  channel.rs  checksum.rs  client.rs  error.rs  lib.rs  message.rs  options.rs  publisher.rs  socket.rs  split_buffer.rs  subscriber.rs  syscall_shim.rs
rust_client/tests/: client_test.rs  latency_test.rs  syscall_failure_test.rs
rust_rpc/: Cargo.toml  README.md  build.rs
rust_rpc/src/: async_io.rs  client.rs  common.rs  error.rs  lib.rs  server.rs  stream.rs
rust_rpc/tests/: rpc_test.rs
server/: Android.bp  BUILD.bazel  CMakeLists.txt  client_handler.cc  client_handler.h  main.cc  plugin.h  server.cc  server.h  server_channel.cc  server_channel.h  server_ffi.cc  server_ffi.h  server_test.cc  shadow_replicator.cc  shadow_replicator.h
server/python/: BUILD.bazel  CMakeLists.txt  server.cc
shadow/: BUILD.bazel  CMakeLists.txt  main.cc  shadow.cc  shadow.h  shadow_test.cc
toolchain/: cc_toolchain_config.bzl  qcc_wrapper.sh
tools/: render_latency_report.py
