package(default_visibility = ["//visibility:public"])

config_setting(
  name = "macos_arm64",
  values = {"cpu": "darwin_arm64"},
)

config_setting(
  name = "macos_default",
  values = {"cpu": "darwin"},
)

config_setting(
  name = "macos_x86_64",
  values = {"cpu": "darwin_x86_64"},
)

config_setting(
  name = "qnx_pmem",
  values = {"define": "subspace_qnx_pmem=enabled"},
)

config_setting(
  name = "linux_pmem_shim",
  values = {"define": "subspace_linux_pmem_shim=enabled"},
)

