module(
    name = "subspace",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "33.2")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

# Toolbelt
git_repository(
    name = "toolbelt",
    commit = "0286a5f6da0f256d6ffbc9f6b43cd6b003fe9dbf",
    remote = "https://github.com/dallison/cpp_toolbelt.git",
)
# For local debugging of toolbelt coroutine library.
# bazel_dep(name = "toolbelt")
# local_path_override(
#    module_name = "toolbelt",
#    path = "../cpp_toolbelt",
# )

# Coroutines
http_archive(
    name = "coroutines",
    integrity = "sha256-fdSwDRrEyFf6PRX8fkkfSPTWPB3Z9tc5GiUbkwsk0Mc=",
    strip_prefix = "co-3.0.0",
    urls = ["https://github.com/dallison/co/archive/refs/tags/3.0.0.tar.gz"],
)
# For local debugging of co coroutine library.
# bazel_dep(name = "coroutines")
# local_path_override(
#    module_name = "coroutines",
#    path = "../co",
# )

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11.1",
)

bazel_dep(name = "pybind11_bazel", version = "3.0.0")
