module(
    name = "subspace",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "33.2")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")
bazel_dep(name = "coroutines", version = "3.0.0")

# Toolbelt
# http_archive(
#     name = "toolbelt",
#     # sha256 = "3b1ea0a94c1cd253a51db47deb1b0ff4f68fff15b865ff2e640fa193d60ad97c",
#     strip_prefix = "cpp_toolbelt-2.0.0",
#     integrity = "sha256-c3f01XdmasYlT54BhvPL9ljctRV8JoLz2PpX+EWO/S8=",
#     #urls = ["https://github.com/dallison/cpp_toolbelt/archive/82c0692d5a815c0cefb7b467ba78ae8ced795ee7.tar.gz"],
#     urls = ["https://github.com/dallison/cpp_toolbelt/releases/download/2.0.0/cpp_toolbelt-2.0.0.tar.gz"],
# )

# For local debugging of toolbelt coroutine library.
bazel_dep(name = "toolbelt")
local_path_override(
   module_name = "toolbelt",
   path = "../cpp_toolbelt",
)


# For local debugging of co coroutine library.
# local_path_override(
#   module_name = "coroutines",
#   path = "../co",
# )

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11.1",
)

bazel_dep(name = "pybind11_bazel", version = "3.0.0")
